[package]
name = "ether-type"
version = "0.1.0"
edition = "2021"
description = "A parser for IEEE 802.3 EtherTypes."
authors = ["Frostie314159"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frostie314159/awdl-frame-parser"

[dependencies]
bin-utils = { version = "0.1.0", default-features = false }

[features]
debug = []
default = ["debug"]
